# MT_Django_API

./: README.md
Django_API_Main/: pyproject.toml
Django_API_Main/crud_api/: db.sqlite3  web.config
Django_API_Main/crud_api/API/migrations/: 0001_initial.py
Django_API_Main/crud_api/CRUD_API/: settings.py  urls.py
Django_API_Venv/: pyvenv.cfg
Django_API_Venv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
