[tool.poetry]
name = "crud_api"
version = "0.1.0"
description = "Initial Django application"
authors = ["Akshat"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
